--- a/charts/example/values.yaml
+++ b/charts/example/values.yaml
@@ -1,5 +1,6 @@
 myobj:
   myproperty: my value
+  otherproperty: default value
 
 addPackagedValue: false
 #packagedValue: supposed to be provided as inline value by the Action
