--- a/.cloudbees/workflows/workflow.yaml
+++ b/.cloudbees/workflows/workflow.yaml
@@ -39,10 +39,20 @@ jobs:
       name: Configure container registry for staging ECR
       uses: cloudbees-io/configure-ecr-credentials@v1
     - name: Build container image
+      id: build-image
       uses: cloudbees-io/kaniko@v1
       with:
         destination: 020229604682.dkr.ecr.us-east-1.amazonaws.com/actions/helm-package-action:${{ cloudbees.scm.sha }}${{ cloudbees.scm.branch == 'main' && ',020229604682.dkr.ecr.us-east-1.amazonaws.com/actions/helm-package-action:latest' || '' }}
         labels: maintainer=sdp-pod-3,email=engineering@cloudbees.com
+
+    - id: slsa-attestation
+      name: Generate SLSA attestation
+      uses: https://github.com/calculi-corp/slsa-attestation@v1
+      with:
+        image-digest: 020229604682.dkr.ecr.us-east-1.amazonaws.com/actions/helm-package-action@${{ steps.build-image.outputs.digest }}
+        aws-role-to-assume: ${{ vars.oidc_staging_iam_role }}
+        aws-region: us-east-1
+        aws-kms-alias: cbp-dev-kms-key-cosign
     - name: Run TruffleHog Container Action
       uses: cloudbees-io/trufflehog-secret-scan-container@v1
       with:
